# faster-whisper-node

./: .gitignore  CONTRIBUTING.md  README.md  index.js  package-lock.json  package.json  streaming-worker-pool.js  test.js
.github/workflows/: ci.yml  release.yml
benchmarks/: transcription.bench.js
crates/engine/: Cargo.toml  build.rs  index.d.ts  index.js
crates/engine/src/: download.rs  lib.rs
docs/: CONCURRENT_STREAMING.md  TESTING.md
scripts/: build-linux.sh  build-mac.sh  download-prebuilt.sh  post-build.js
stress-tests/: README.md  concurrent.test.js
tests/: phase3.test.js  phase4.test.js
tests/unit/: utils.test.js
